--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env.local
+.env
 
 # vercel
 .vercel
@@ -32,3 +34,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+#auth
+firebase-auth.json
