--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "firebase-admin": "10.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
